# tiler

./: .gitignore  Cargo.toml  flake.nix  open-questions.md
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
docs/: requirements.md
extension/: dbus-interface.xml  dbus.js  extension.js  menu.js  metadata.json
extension/tests/: run_tests.js  test_dbus_interface.js  test_dbus_service.js  test_extension_skeleton.js  test_extension_wiring.js  test_integration.js  test_menu.js  test_metadata.js
nix/: gnome-extension.nix  module.nix  package.nix
nix/tests/: run-all.sh  test-extension-derivation.nix  test-extension-derivation.sh  test-flake-structure.sh  test-module.nix  (+2 more)
scripts/: dev-deploy.sh  diagnose-keybinding.sh  e2e-test.sh  nested-test.sh  stacking-test.sh
src/: cli.rs  daemon.rs  lib.rs  logging.rs  main.rs  model.rs
tests/: binary_test.rs  bugfix_iteration1_test.rs  cli_dispatch_test.rs  cli_test.rs  config_test.rs  coverage_gaps_test.rs  daemon_event_test.rs  daemon_test.rs  enforcement_test.rs  engine_core_test.rs  gnome_proxy_test.rs  integration_test.rs  ipc_client_test.rs  ipc_integration_test.rs  ipc_protocol_test.rs  ipc_server_test.rs  lane2_integration_test.rs  lane5_integration_test.rs  menu_engine_test.rs  menu_key_parse_test.rs  menu_state_test.rs  mission_rules_test.rs  model_types_test.rs  move_window_test.rs  preset_layout_test.rs  real_world_scenarios_test.rs  signal_test.rs  stack_layout_test.rs  virtual_desktop_ops_test.rs  window_filter_test.rs  zbus_integration_test.rs  zbus_proxy_test.rs
(+21 files in other folders)
