[package]
name = "tiler"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "signal"] }
serde_json = "1"
zbus = "5"
toml = "0.8"

[dev-dependencies]
serde_json = "1.0.149"
